...

        <ImageView
            android:id="@+id/back_btn"
            style="@style/MenuBackButtonStyle" />

        <org.ekstep.genie.customview.EkStepCustomTextView
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/size_10"
            android:paddingTop="5dp"
            android:text="@string/title_language_test"
            android:textAllCaps="true"
...
                android:id="@+id/txt_selected_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/more_btn"
                android:padding="@dimen/size_10"
                android:text="@string/label_language"
                android:textAllCaps="true"
                android:textColor="@color/very_dark_grayish_orange"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />
        </RelativeLayout>

...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/size_10"
                    android:paddingLeft="@dimen/size_10"
                    android:paddingTop="@dimen/size_10"
                    android:text="@string/msg_setting_changing_language"
                    android:textColor="@color/dark_grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
...
