<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        style="@style/NavigationViewStyle">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="nav_recycler_view"
            android:scrollbarSize="2dp"
            android:scrollbarThumbVertical="@android:color/darker_gray"
            android:scrollbars="vertical" />

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
