...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_small"
            android:paddingTop="@dimen/spacing_small">

            <ImageView
                android:id="@+id/img_berger_menu"
                android:layout_width="@dimen/home_header_icon_size"
                android:layout_height="@dimen/home_header_icon_size"
                android:layout_marginLeft="@dimen/standard_spacing"
                android:layout_marginRight="@dimen/standard_spacing"
                android:background="?attr/menuHamburgerIcon"
                android:contentDescription="burger_menu" />
...
