...
                android:paddingTop="@dimen/size_5"
                android:text="@string/label_tag_program_code"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_15" />

            <org.ekstep.genie.customview.EkStepCustomEditText
                android:id="@+id/edt_tag_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_tag_type_here"
                android:imeOptions="actionNext"
                android:singleLine="true"
...
                android:paddingTop="@dimen/spacing_normal"
                android:text="@string/label_tag_short_desc"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_15" />

            <org.ekstep.genie.customview.EkStepCustomEditText
                android:id="@+id/edt_tag_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_tag_type_here"
                android:imeOptions="actionDone"
                android:singleLine="true"
...
                        android:paddingTop="@dimen/size_5"
                        android:text="@string/label_tag_start_date"
                        android:textColor="@color/profile_background"
                        android:textSize="@dimen/txt_size_15" />

                    <RelativeLayout
                        android:id="@+id/layout_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_tiny">

                        <org.ekstep.genie.customview.EkStepCustomTextView
                            android:id="@+id/txt_start_date"
...
                        android:paddingTop="@dimen/size_5"
                        android:text="@string/label_tag_end_date"
                        android:textColor="@color/profile_background"
                        android:textSize="@dimen/txt_size_15" />

                    <RelativeLayout
                        android:id="@+id/layout_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_tiny">

                        <org.ekstep.genie.customview.EkStepCustomTextView
                            android:id="@+id/txt_end_date"
...
                </LinearLayout>


            </LinearLayout>

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:id="@+id/layout_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/bg_blue_rounded_selector"
                android:includeFontPadding="false"
...
