...
        <ImageView
            android:id="@+id/btn_back"
            style="@style/MenuBackButtonStyle"
            android:layout_alignParentLeft="true" />

        <org.ekstep.genie.customview.EkStepCustomTextView
            android:id="@+id/txt_header"
            style="@style/HeaderTextStyle"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btn_back"></org.ekstep.genie.customview.EkStepCustomTextView>

        <ImageView
            android:id="@+id/btn_settings_share"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_settings_master"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:background="@color/color_gray" />

        <FrameLayout
...
