...
                android:text="@string/label_create_new"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_16"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recylerview_tags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title_program_tag"
                android:layout_marginTop="@dimen/spacing_normal"
                android:overScrollMode="never" />
        </RelativeLayout>
...
            android:layout_height="wrap_content"
            android:background="@drawable/about_dialog_background"
            android:gravity="center"
            android:visibility="visible">

            <ImageView
                android:id="@+id/fab_add_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_add_tag" />

            <org.ekstep.genie.customview.EkStepCustomTextView
...
